# CrossPlatformMixed

./: .gitignore  CMakeLists.txt  CrossPlatformMixed.sln  CrossPlatformMixed.vcxproj  CrossPlatformMixed.vcxproj.filters  README.md  crossPlatform.h  main.cpp  template.sh  utils.cpp
